--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,7 @@ jobs:
   build-and-test:
     macos:
       xcode: 14.2.0
+    resource_class: macos.x86.medium.gen2
     environment:
       FL_OUTPUT_DIR: output
     steps:
