--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
   build-and-test:
     macos:
       xcode: 14.2.0
-    resource_class: large
+    resource_class: medium
     environment:
       FL_OUTPUT_DIR: output
     steps:
